[package]
name = "dd"
version = "0.1.0"
authors = ["hzjsea <hzjsea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.1"
colored = "2"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]
