[package]
name = "todolist"
version = "0.1.0"
authors = ["hzjsea <hzjsea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
simple-error = "0.2"
prettytable-rs = "0.8.0"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }