[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["hzjsea <hzjsea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.7"
diesel = { version = "1.4.5", features = ["mysql"]}
r2d2-diesel = "1.0"
r2d2 = "0.8"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.9.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
