[package]
name = "rocket_databases"
version = "0.1.0"
authors = ["Alpaca-H <1097690268@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
rocket = "0.4.5"

r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
md-5 = "0.9.1"
base64 = "0.13.0"
chrono = "0.4"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
